--- a/app/src/main/res/layout/activity_user_input.xml
+++ b/app/src/main/res/layout/activity_user_input.xml
@@ -7,13 +7,14 @@
     android:onClick="onSearch"
     tools:context=".UserInputActivity">
 
+
     <EditText
         android:id="@+id/editTextTextPostalAddress"
-        android:layout_width="248dp"
-        android:layout_height="42dp"
+        android:layout_width="256dp"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="@string/input_address_hint"
         android:inputType="textPostalAddress"
@@ -21,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/searchaddress_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -32,13 +33,29 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/editTextTextPostalAddress" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="CheckBox"
+
+    <TextView
+        android:id="@+id/advancedoptions_textView"
+        android:layout_width="150dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="20dp"
+        android:onClick="advancedOptions"
+        android:text="@string/advanced_options"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="140dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />
+
+    <fragment
+        android:id="@+id/userinput_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="124dp"
+        app:defaultNavHost="true"
+        app:layout_constraintTop_toBottomOf="@+id/advancedoptions_textView"
+
+        app:navGraph="@navigation/advancedoptions_nav"
+        tools:layout_editor_absoluteX="-16dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
