--- a/app/src/main/res/layout/activity_user_input.xml
+++ b/app/src/main/res/layout/activity_user_input.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:text="@string/input_button_text"
+        android:onClick="onSearch"
         app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
